kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/005_superoperations_parammismatch3_inv.kmt
/* $Id: 005_superoperations_parammismatch3_inv.kmt,v 1.1 2007-09-10 08:35:13 cfaucher Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;
using kermeta::standard


class A
{
   operation m(x : Object) : String is do

   end
}



class D inherits A
{
   method m(x : String, x2 : Object) : String is do

   end
}
